--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -12,11 +12,14 @@ en:
 zh:
   languageCode: zh-Hans
   contentDir: content/zh
-  title: Chinese website title...
+  title: 李挺
 #  params:
 #    description: Site description in Chinese...
-#  menu:
-#    main:
-#      - name: 传
-#        url: '#about'
-#        weight: 1
+#    menu:
+#      main:
+#        - name: 关于
+#          url: '#about'
+#          weight: 1
+#         - name: 与我联系
+#          url: '#contact'
+#          weight: 1
