--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -12,7 +12,7 @@ en:
 zh:
   languageCode: zh-Hans
   contentDir: content/zh
-  title: 李挺
+  title: Liting's Homepage
 #  params:
 #    description: Site description in Chinese...
 #    menu:
