--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -10,7 +10,7 @@ baseURL: 'https://csliting.netlify.app' # Website URL
 ## LANGUAGE
 ############################
 
-defaultContentLanguage: en
+defaultContentLanguage: zh
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
